p3/confs/ingress-app.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-ressource
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/app/`)
      services:
        - kind: Service
          name: will-playground-service
          namespace: dev
          port: 80
